default/objects/E2E_Google_Speed_Analyst_Settings__c/E2E_Google_Speed_Analyst_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Google Speed Analyst Settings</label>
</CustomObject>