default/objects/E2E_Google_Speed_Analyst_Settings__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>