default/objects/E2E_Google_Speed_Analyst_Settings__c/fields/Mobile_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Site_Url__c</fullName>
    <label>Mobile Site Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>